--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,34 +2,50 @@
 <html lang="en">
 
 <head>
+  <!-- Impostazioni del carattere e della visualizzazione per vari dispositivi -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>YT Channel Metrics</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/dark-mode.css">
 
+  <!-- Titolo della pagina web -->
+  <title>YouTube Channel Metrics</title>
+
+  <!-- Icona della scheda del browser (favicon) -->
+  <link rel="icon" href="images/logo.png" type="image/png">
+
+  <!-- Collegamento al foglio di stile Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Collegamento al foglio di stile per la modalità scura -->
+  <link rel="stylesheet" href="css/dark-mode.css">
 </head>
 
 <body>
 
+  <!-- Inclusione dell'intestazione dalla cartella dei parziali -->
   <%- include('partials/header') %>
 
+    <!-- Contenitore principale -->
     <div class="container mt-4 ">
-      <!-- Card Wrapper for Form -->
+      <!-- Wrapper della card per il form -->
       <div class="card shadow-sm rounded dark-mode-target">
+        <!-- Intestazione della card -->
         <div class="card-header bg-light dark-mode-target">
           <h5 class="card-title text-center">Enter Channel URL</h5>
         </div>
+        <!-- Corpo della card -->
         <div class="card-body bg-light dark-mode-target">
+          <!-- Form per inviare l'URL del canale -->
           <form method="POST" action="/" class="mb-4">
+            <!-- Campo di input per l'URL del canale -->
             <input type="text" class="form-control form-control-lg text-center mb-3 rounded-pill" id="channelLink"
               name="channelLink" placeholder="https://www.youtube.com/@[handle]" required>
+            <!-- Bottone per ottenere le metriche -->
             <button type="submit" class="btn btn-primary btn-lg w-100 rounded-pill">Get Metrics</button>
           </form>
         </div>
       </div>
 
-      <!-- Error Message -->
+      <!-- Messaggio di errore -->
       <% if (locals.error) { %>
         <div class="alert alert-danger mt-3 rounded">
           <%= error %>
@@ -37,13 +53,12 @@
         <% } %>
     </div>
 
-
+    <!-- Inclusione delle altre sezioni dalla cartella dei parziali -->
     <%- include('partials/channel') %>
-
       <%- include('partials/videos') %>
-
         <%- include('partials/footer') %>
 
+          <!-- Collegamento agli script JavaScript di Bootstrap e della modalità scura -->
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
           <script src="js/dark-mode.js"></script>
 </body>
