--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,26 +1,26 @@
 <header>
-  <!-- Barra di navigazione principale -->
+  <!-- Main navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <!-- Logo e titolo del sito nella navbar -->
+      <!-- Site logo and title in the navbar -->
       <a class="navbar-brand ps-auto" href="#">
         <img src="images/logo.png" alt="Logo" width="30" height="30" class="d-inline-block align-top">
         YouTube Channel Metrics
       </a>
 
-      <!-- Bottone per il toggle della navbar su schermi piccoli -->
+      <!-- Button for toggling the navbar on small screens -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <!-- Elementi collassabili della navbar -->
+      <!-- Collapsible elements of the navbar -->
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-          <!-- Interruttore per il tema scuro -->
+          <!-- Switch for dark mode -->
           <div class="form-check form-switch me-2 ms-auto">
             <input class="form-check-input" type="checkbox" id="darkModeToggle">
-            <label class="form-check-label text-white" for="darkModeToggle">Tema Scuro</label>
+            <label class="form-check-label text-white" for="darkModeToggle">Dark Mode</label>
           </div>
         </div>
       </div>
